kubernetes/account-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  replicas: 2  # Nombre de réplicas (pods)
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: 329599629502.dkr.ecr.eu-west-3.amazonaws.com/acount:latest
          ports:
            - containerPort: 8083
