kubernetes/authentification-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentification
spec:
  replicas: 3
  selector:
    matchLabels:
      app: authentification
  template:
    metadata:
      labels:
        app: authentification
    spec:
      containers:
      - name: authentification
        image: <aws_account_id>.dkr.ecr.<region>.amazonaws.com/authentification:latest
        ports:
        - containerPort: 8081
