kubernetes/kafka-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-client
spec:
  containers:
  - name: kafka-client
    image: bitnami/kafka:latest
    command: ["sleep", "infinity"]
