kubernetes/loan_management_deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-management
  labels:
    app: loan-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loan-management
  template:
    metadata:
      labels:
        app: loan-management
    spec:
      containers:
        - name: loan-management
          image: 329599629502.dkr.ecr.eu-west-3.amazonaws.com/loan-management:6
          ports:
            - containerPort: 8087
      imagePullSecrets:
        - name: your-docker-registry-secret  # Si vous utilisez un registre privé
