kubernetes/notification-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-microservice
  labels:
    app: notifications-microservice
spec:
  replicas: 2  # Nombre de réplicas (pods)
  selector:
    matchLabels:
      app: notifications-microservice
  template:
    metadata:
      labels:
        app: notifications-microservice
    spec:
      containers:
        - name: notifications-microservice
          image: 329599629502.dkr.ecr.eu-west-3.amazonaws.com/notification:4  # Remplacez par votre image Docker
          ports:
            - containerPort: 8085  # Le port sur lequel votre application écoute
