kubernetes/transaction-deployemnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transactions
  template:
    metadata:
      labels:
        app: transactions
    spec:
      containers:
        - name: transactions
          image: 329599629502.dkr.ecr.eu-west-3.amazonaws.com/transaction:35
          ports:
            - containerPort: 8084
