kubernetes/user-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: <aws_account_id>.dkr.ecr.<region>.amazonaws.com/users:latest
        ports:
        - containerPort: 8080
