kubernetes/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  type: ClusterIP  # Utilisez LoadBalancer pour exposer votre application sur Internet
  ports:
    - port: 8083  # Port externe
      targetPort: 8083  # Port interne (celui de votre application)
  selector:
    app: account-service
