kubernetes/frontend-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend-admin-service
    namespace: default
spec:
    selector:
      app: frontend-admin-app
    ports:
      - protocol: TCP
        port: 80
        targetPort: 80
    type: LoadBalancer
