kubernetes/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka
  clusterIP: None
