kubernetes/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-microservice
  labels:
    app: notifications-microservice
spec:
  type: ClusterIP  # Utilisez LoadBalancer pour exposer votre application sur Internet
  ports:
    - port: 8085  # Port externe
      targetPort: 8085  # Port interne (celui de votre application)
  selector:
    app: notifications-microservice
