kubernetes/transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactions-service
  namespace: default
spec:
  selector:
    app: transactions
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
